add dlq mechanism